# NEMCore

./: .gitignore  .readthedocs.yml  .yapf.style  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build-doc.ps1  demo.py  mkdocs.yml  pyproject.toml  setup.py
demo/app/: api.py  const.py  server.py
demo/app/view/: index.py
demo/gui/: index.html  layout.html
demo/gui/components/: music-list.html  playlist.html
demo/gui/modal/: login.html
docs/: api_ref.rst  conf.py  index.md  index.rst  quickstart.md  quickstart.rst
docs/source/: conf.py  index.rst  reference.rst  tutorial.rst
docs/source/examples/: get_recommend_songs.json  get_user_playlist.json
docs/source/schemas/: daily-song.json
docs/source/schemas/playlist/: playlist.json
docs/source/schemas/userinfo/: account.json  profile.json
nemcore/: __init__.py  api.py  cache.py  conf.py  const.py  encrypt.py  exceptions.py  netease.py  parser.py  pdict.py  singleton.py  storage.py  types.py  utils.py
nemcore/types/: __init__.py  easy_access.py  fm_like_resp.py  fm_trash_resp.py  get_album_info_resp.py  get_artist_albums_resp.py  get_artist_info_resp.py  get_dj_channels_resp.py  get_dj_programs_resp.py  get_personal_fm_resp.py  get_playlist_detail_resp.py  get_recommend_resource_resp.py  get_recommend_songs_resp.py  get_song_comments_resp.py  get_song_detail_resp.py  get_song_lyric_resp.py  get_song_url_resp.py  get_top_artists_resp.py  get_top_playlists_resp.py  get_user_account_resp.py  get_user_playlist_resp.py  login_resp.py  new_album_resp.py  playlist.py  search_resp.py  user_profile.py
nemcore/utils/: __init__.py  cache.py  compatible.py
requirements/: demo.txt  docs.txt  lint.txt  requirements.txt  test.txt
tests/: conf.toml  conftest.py  test_api.py  test_api_cached.py  test_apischema.py  test_conf.py  test_encrypt.py  test_neteasecore.py  test_neteasecore_cached.py
