[tool.poetry]
name = "nemcore"
version = "0.1.4"
description = "NetEase Cloud Music ApiClient extracted from NetEase-MusicBox"
authors = ["weak_ptr <weak_ptr@163.com>"]
license = 'MIT'
readme = "README.md"
homepage = "https://github.com/nnnewb/NEMCore"
keywords = ["netease","sdk","netease cloudmusic"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
requests-cache = "^0.5.2"
six = "^1.12"
pycryptodome = "^3.9"
pycryptodomex = "^3.9"
toml = "^0.10.0"
cachetools = "^3.1"
filelock = "^3.0"
sphinx = {version = "^2.2", extras = ["docs"]}
doc8 = {version = "^0.8.0", extras = ["docs"]}
sphinx-jsonschema = {version = "^1.11", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.9", extras = ["docs"]}
genson = {version = "^1.1", extras = ["docs"]}
groundwork-sphinx-theme = {version = "^1.1", extras = ["docs"]}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
flake8-bugbear = "^19.8"
yapf = "^0.28.0"
isort = "^4.3"
pytest-cov = "^2.7"
pytest-dotenv = "^0.4.0"
pytest-mock = "^1.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
