[tool.poetry]
name = "NEMCore"
version = "0.1.8"
description = "NetEase Cloud Music api client"
authors = ["weak_ptr <weak_ptr@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nnnewb/nemcore"
repository = "https://github.com/nnnewb/nemcore"
documentation = "https://nemcore.readthedocs.io/en/latest/"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Natural Language :: Chinese (Simplified)',
    'Programming Language :: Python :: 3 :: Only',
    'Typing :: Typed'
]

[tool.autopep8]
max_line_length = 120

[[tool.poetry.source]]
name = 'tuna'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple'
default = true

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
pycryptodomex = "^3.9"
cachetools = "^4.0"
importlib-metadata = "^3.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"
isort = "^5.7.0"
pytest = "^6.2.1"
pytest-dotenv = "^0.5.2"
Sphinx = "^3.4.2"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
